# bot_meli

./: .gitignore  DEPLOY_GUIDE.md  README.md  bot_24_7.py  bot_runner.py  bot_simples_24_7.py  config.py  db.py  env_example.txt  fix_conflict.py  handlers.py  importar_rotas.py  limpar_updates.py  main.py  monitor_bot.py  o do pip no Render  pyproject.toml  render.yaml  render_main.py  requirements.txt  run_bot.py  setup.py  start_bot.bat  start_bot.py  start_bot_background.bat  stop_bot.bat  testar_espelho.py  verificar_banco.py
