[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roteiro-bot"
version = "1.0.0"
description = "Bot do Telegram para controle de rotas"
authors = [{name = "Vinicius", email = "vinicius@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot==20.7",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
